# Rip_Bot

./: .gitignore  README.md  install.sh  main.py  pyproject.toml  readme.md  requirements.txt
src/rip_bot/: cli.py
